manifests/base/showcase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  namespace: "janus-idp"
  labels:
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: janus-idp
spec:
  tls:
    - hosts:
      - show.apps.ci-ln-j5xqvkt-76ef8.aws-2.ci.openshift.org
      secretName: janus-idp-cert
  rules:
    - host: show.apps.ci-ln-j5xqvkt-76ef8.aws-2.ci.openshift.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  number: 7007
